# ai-compose

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.codegraph/: .gitignore
docs/: prd.md  preset-fragments-draft.md
docs/superpowers/specs/: 2026-05-28-hooks-design.md
scripts/: dev-port.d.mts  dev-port.mjs  dev-port.test.mjs  tauri-dev.mjs
src/: ai-compose-app.css  ai-compose-app.tsx  ai-compose-store.ts  app.test.tsx  codex-agent-command.ts  compose-prompt.ts  editor-target-command.ts  index.css  main.tsx  mcp-servers.ts  prompt-fragments.test.ts  prompt-fragments.ts  prompt-workbench-app.css  prompt-workbench-app.tsx  prompt-workbench-store.ts  skills-utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  editor.rs  hooks.rs  main.rs  mcp.rs  prompt.rs  skills.rs  system.rs  utils.rs
src/app/: app-hooks.test.tsx  app-mcp.test.tsx  app-prompt.test.tsx  app-skills-actions.test.tsx  app-skills-browse.test.tsx  app-test-support.ts  app.test.tsx  app.tsx  main.tsx
src/app/styles/: index.css
src/components/: add-source-modal.tsx  editor-toggle-icon.tsx  mcp-panel.tsx  prompt-panel.tsx  skill-detail-modal.tsx  skills-panel.tsx
src/features/add-skill-source/: index.ts
src/features/manage-account/: index.ts
src/features/manage-skill/: index.ts
src/pages/ai-compose-workbench/: index.ts
src/pages/prompt-workbench/: index.ts
src/shared/api/: editor-target-command.test.ts  index.ts
src/shared/lib/: index.ts
src/shared/model/: index.ts
(+48 files in other folders)
