[package]
name = "ai-compose"
version = "0.1.0"
description = "AI Compose desktop host"
authors = ["xinghunm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process"] }
